# codellm

./: .gitignore  README.md  generate.py  pyproject.toml  split_data.py  train_redpajama.py
codellm/: data_setup.py  engine.py  model.py  model_builder.py  packed_dataset.py  prepare_redpajama.py  tokenizer.py  train.py  utils.py
codellm/preprocess/: get_tokenizer.py  prepare_redpajama.py  split_data.py
tests/: test_model.py
