[project]
name = "codellm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.3.0",
    "jsonargparse>=4.37.0",
    "lightning>=2.5.0.post0",
    "protobuf>=5.29.3",
    "pytest>=8.3.4",
    "rich>=13.9.4",
    "sentencepiece>=0.2.0",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "transformers>=4.48.2",
    "wandb>=0.19.7",
]
